# langchain-academy

./: .gitignore  pyproject.toml
module-0/: basics.ipynb
module-1/: 01. simple-graph.ipynb  02. chain.ipynb  03. router.ipynb  04. agent.ipynb  05. agent-memory.ipynb  deployment.ipynb
module-1/studio/: agent.py  router.py  simple.py
module-1/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
module-2/: 01. state-schema.ipynb  02. state-reducers.ipynb  03. multiple-schemas.ipynb  04. trim-filter-messages.ipynb  05. chatbot-summarization.ipynb  06. chatbot-external-memory.ipynb
module-2/state_db/: example.db  example.db-shm  example.db-wal
module-3/: 01. streaming-interruption.ipynb  02. breakpoints.ipynb  03. edit-state-human-feedback.ipynb  04. dynamic-breakpoints.ipynb  05. time-travel.ipynb
module-3/studio/: agent.py  dynamic_breakpoints.py
module-3/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
module-4/: 01. parallelization.ipynb  02. sub-graph.ipynb  03. map-reduce.ipynb  04. research-assistant.ipynb  research-assistant.ipynb
module-6/: 01. creating.ipynb  02. connecting.ipynb  03. double-texting.ipynb
